--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">P0051_layoutFile</string>
     <string name="action_settings">Settings</string>
     <string name="myscreenn">Новая хрень</string>
+    <string name="tupeHere">Type here</string>
+    <string name="OK_btn">OK</string>
+    <string name="Cancel_Btn">Cancel</string>
 </resources>
